fix: aligns footer items correctly

--- a/src/components/CreditLockup/theme.module.scss
+++ b/src/components/CreditLockup/theme.module.scss
@@ -1,5 +1,25 @@
 @use '../../styles/functions';
 
 .wrapper {
-  margin: functions.spacing(2) functions.spacing(2) 0;
+  margin: functions.spacing(4) 0 functions.spacing(2);
+}
+
+.logo {
+  opacity: 0.75;
+}
+
+.link {
+  &:hover {
+    .logo {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+  }
+
+  &:focus,
+  &:active {
+    .logo {
+      transform: scale(1);
+    }
+  }
 }
